VacuumSystem are now connected to the processor.